# fontInstaller

./: CMakeLists.txt  LICENSE  README.md  main.c  utils.c  utils.h
module/: CMakeLists.txt  exports.yml  fontInstallerModule.h  main.c
sce_sys/livearea/contents/: template.xml
